# pico-sdk-template

./: .gitignore  readme.md
.devcontainer/: Dockerfile  devcontainer.json
firmware/: CMakeLists.txt  hello.c
